<resources>
    <string name="app_name">Reclutadores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--OPCIONES MENU-->
    <string name="menu">Inicio</string>
    <string name="regCandidates">Registrar Candidatos</string>
    <string name="candidates">Candidatos</string>
    <string name="synchronize">Sincronizar</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="login_button">Ingresar</string>
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_content_desc_logo">Logo de la empresa</string>
    <string name="login_content_desc_user">Logo usuario</string>
    <string name="login_content_desc_password">Logo contraseña</string>
    <string name="remind_user">Recordar usuario</string>

    //Privacy Policies
    <string name="location_and_other_policy_activity">Uso de tu ubicación y permisos</string>
    <string name="description_policy_activity">La aplicación (Reclutadores Agroberries) solicita acceso a tu ubicación **mientras la aplicación está en uso** para registrar las coordenadas precisas al momento de capturar los datos de un candidato y validar la zona de reclutamiento.</string>
    <string name="description2_policy_activity">Esta información es necesaria para asegurar la validez de los registros en campo y garantizar la transparencia en los procesos de contratación de Agroberries.</string>
    <string name="description3_policy_activity">Si decides no otorgar este permiso, la función de georreferenciación de candidatos no estará disponible. Puedes gestionar este permiso en cualquier momento desde los ajustes de tu dispositivo.</string>
    <string name="confirm_policy_privacy">ACEPTAR Y CONTINUAR</string>
    <string name="rights_policy_activity">Todos los derechos reservados © Agroberries México 2024-2030</string>

    //Registro de reclutador
    <string name="formulario">Registro de Reclutador</string>
    <string name="reclutador">Nombre del reclutador</string>
    <string name="lugar_origen">Lugar de origen</string>
    <string name="num_personas">Número de personas</string>

    //Registro de candidatos
    <string name="formulario_candidatos">Registro de Candidatos</string>
    <string name="candidate_name">Nombre del candidato</string>
    <string name="ine_photo_desc">TOMAR FOTO INE</string>
    <string name="documentation_checklist">Marcar documentación entregada</string>
    <string name="register_candidate">Registrar candidato</string>
    //documentacion
    <string name="doc_ine">Registro de Candidatos</string>
    <string name="doc_curp">CURP</string>
    <string name="doc_rfc">RFC</string>
    <string name="doc_birth_cert">Acta de nacimiento</string>
    <string name="doc_nss">Número de seguro social</string>
    <string name="doc_cbanco">Cuenta de banco</string>
    <string name="doc_cfiscal">Constancia de situación fiscal</string>
    <string name="recorte">Al tomar foto puedes ajustar la imagen</string>
    <string name="finish">Finalizar registros</string>
    <string name="contador">Candidatos registrados: </string>

    //SINCRONIZACION
    <string name="download_data_sync_fragment">Descargar Catalogos</string>
    <string name="upload_data_sync_fragment">Enviar Candidatos</string>
    <string name="upload_data_pending">Pendientes de enviar </string>

    //ABOUT
    <string name="about_fragment">Acerda de...</string>
    <string name="developed_by_about_fragment">Desarrollado por el equipo de T.I. Agroberries México</string>
    <string name="doubts_about_fragment">¿Tienes dudas?</string>
    <string name="contact_us_about_fragment">Contactanos</string>
    <string name="mail1_about_fragment">aorozco@agroberries.mx</string>
    <string name="mail2_about_fragment">programador@agroberries.mx</string>
    <string name="version_about_fragment">Version: 1.0.0</string>
    <string name="privacy_policies_about_fragment">Políticas de privacidad</string>
    <string name="title_activity_login">LoginActivity</string>

    //DETALLES CANDIDATOS
    <string name="consulta_candidatos">Consultar Candidatos</string>
    <string name="select_reclutador">Seleccione un reclutador</string>
    <string name="buscar">Realizar Búsqueda</string>
</resources>