<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    tools:context=".ui.registerCandidate.RegisterCandidatesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <!--TextView
                android:id="@+id/tv_form_candite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formulario_candidatos"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"/-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_candidate_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/candidate_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_candidate_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_form_candite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recorte"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/til_candidate_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/card_photo_container" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_photo_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_marginTop="32dp"
                app:layout_constraintDimensionRatio="3:2"  app:layout_constraintTop_toBottomOf="@id/til_candidate_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/iv_candidate_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:background="@android:color/white"
                    android:contentDescription="@string/ine_photo_desc"/>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_upload_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ine_photo_desc"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/card_photo_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_docs_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/documentation_checklist"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/btn_upload_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"/>

            <LinearLayout
                android:id="@+id/ll_checklist_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_docs_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_curp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doc_curp"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_rfc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doc_rfc"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_acta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doc_birth_cert"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_nss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doc_nss"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_cbanco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doc_cbanco"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_cfiscal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doc_cfiscal"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_candidates_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contador"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_register_candidate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_checklist_container" />

            <Button
                android:id="@+id/btn_register_candidate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/register_candidate"
                app:layout_constraintTop_toBottomOf="@id/ll_checklist_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"/>

            <Button
                android:id="@+id/btn_finish_records"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:backgroundTint="@color/teal_700"
                app:layout_constraintTop_toBottomOf="@id/btn_register_candidate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>